feat:cart with localStorage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ReactJS Stand Alone</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="text-neutral-900"></div>
     <script src="/node_modules/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
